Fix logo alignment in webshop

--- a/src/main/resources/static/css/wisvch-header.css
+++ b/src/main/resources/static/css/wisvch-header.css
@@ -47,15 +47,38 @@ body.menu-open .page-header {
     background-color: #ffffff;
 }
 
-@media (max-width: 991px){
-    .navbar-collapse {
-        padding-top: 3rem;
+.navbar-brand {
+    transform: translateY(30px);
+    margin-top: -30px;
+    margin-left: .5rem;
+}
+
+.navbar-brand img{
+    max-height: 4rem;
+}
+
+@media screen and (max-width: 500px) {
+    .navbar-brand {
+        transform: translateY(0);
+        margin-top: 0;
+        margin-left: 0;
+    }
+
+    .navbar-brand img{
+        max-height: 3rem;
     }
 }
 
-.navbar .logo img {
-    margin: .5rem;
-    height: 4rem;
+@media screen and (max-width: 370px) {
+    .navbar-brand img{
+        max-height: 2rem;
+    }
+}
+
+@media screen and (max-width: 1200px) and (min-width: 500px) {
+    .navbar-collapse {
+        padding-top: 2.5rem;
+    }
 }
 
 .wisv-header.header-left {
